--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     gap: 50px;
 
     .card {
-        flex: 1;
-        width: 400px;
+        /* flex: 1; */
+        width: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
